# ApuestasBotTelegram

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 5e26389b73e0_initial.py  7465b06ce0fd_v2_predictions.py
app/: main.py
app/core/: config.py  database.py
app/models/: __init__.py  bet.py  prediction.py  transaction.py  user.py
app/services/odds/: cache.py  client.py
app/services/stats/: analyzer.py  client.py
app/services/strategy/: engine.py
app/services/user/: service.py
app/telegram/: bot.py
app/telegram/handlers/: __init__.py  balance.py  bet.py  error.py  historial.py  start.py  stats.py
app/telegram/middlewares/: __init__.py
